src/objects/Procedure_Price__c.object
<CustomObject>
    <fields>
        <fullName>Doctor__c</fullName>
        <formula>Procedure__r.Doctor__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Doctor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Facility__c</fullName>
        <formula>Procedure__r.Facility__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Facility</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <description>The list for this currency of the Procedure</description>
        <label>List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price_with_CC_Surcharge__c</fullName>
        <description>Pirce adjusted to include the credit card surcharge.</description>
        <label>Price with CC Surcharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Procedure_Code__c</fullName>
        <formula>Procedure__r.Procedure_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Procedure Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Procedure__c</fullName>
        <label>Procedure</label>
        <referenceTo>Procedure__c</referenceTo>
        <relationshipLabel>Procedure Prices</relationshipLabel>
        <relationshipName>Procedure_Prices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Sale_Price__c</fullName>
        <label>Sale Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Price_List</fullName>
        <columns>NAME</columns>
        <columns>Procedure_Code__c</columns>
        <columns>Procedure__c</columns>
        <columns>Doctor__c</columns>
        <columns>Facility__c</columns>
        <columns>List_Price__c</columns>
        <columns>Price_with_CC_Surcharge__c</columns>
        <filterScope>Everything</filterScope>
        <label>Price List</label>
    </listViews>
</CustomObject>